@@ -211,6 +211,10 @@ testdetails.xsl
 ----------------------
 * Rewrite xsl to be more efficient. Submitted by Ivan Latysh
 
+StatusHelper
+----------------------
+* Taglib tries to read a system property named "false", which, depending on security policies, may be denied (CC-525). Based on patch by R. Lemos 
+
 CruiseControl Release Notes - 2.5
 
 general
